--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "buckutt-client",
+  "name": "buckless-client",
   "version": "1.0.0",
   "authors": [
     "Gabriel Juchault <gabriel.juchault@gmail.com>"
