--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "no-empty": 1,
     "no-ex-assign": 2,
     "no-extra-boolean-cast": 1,
-    "no-extra-semi": 2,
+    "no-extra-semi": 1,
     "no-func-assign": 1,
     "no-inner-declarations": 2,
     "no-invalid-regexp": 2,
@@ -16,18 +16,17 @@
     "no-negated-in-lhs": 2,
     "no-obj-calls": 2,
     "no-sparse-arrays": 2,
-    "no-unexpected-multiline": 2,
+    "no-unexpected-multiline": 1,
     "no-unreachable": 1,
     "use-isnan": 2,
     "valid-jsdoc": 1,
     "valid-typeof": 2,
     "accessor-pairs": 2,
     "block-scoped-var": 2,
-    "consistent-return": 2,
+    "consistent-return": 1,
     "curly": 2,
-    "eqeqeq": 2,
+    "eqeqeq": 1,
     "guard-for-in": 1,
-    "no-alert": 0,
     "no-caller": 2,
     "no-case-declarations": 2,
     "no-else-return": 1,
@@ -36,25 +35,22 @@
     "no-eq-null": 2,
     "no-eval": 2,
     "no-extend-native": 1,
-    "no-extra-bind": 2,
-    "no-fallthrough": 2,
+    "no-extra-bind": 1,
+    "no-fallthrough": 1,
     "no-implicit-coercion": 1,
     "no-implied-eval": 2,
-    "no-invalid-this": 1,
     "no-iterator": 2,
     "no-labels": 2,
     "no-lone-blocks": 1,
     "no-loop-func": 1,
-    "no-magic-numbers": 1,
-    "no-multi-spaces": [1, { "exceptions": { "VariableDeclarator": true } }],
-    "no-multi-str": 2,
+    "no-multi-spaces": [1, { "exceptions": { "VariableDeclarator": true, "Property": true, "ImportDeclaration": true, "AssignmentExpression": true } }],
+    "no-multi-str": 1,
     "no-native-reassign": 2,
     "no-new-func": 2,
     "no-new-wrappers": 2,
-    "no-new": 1,
     "no-octal-escape": 1,
     "no-octal": 1,
-    "no-param-reassign": 2,
+    "no-param-reassign": 1,
     "no-proto": 1,
     "no-redeclare": 2,
     "no-return-assign": 1,
@@ -62,13 +58,13 @@
     "no-self-compare": 2,
     "no-sequences": 2,
     "no-throw-literal": 1,
-    "no-unused-expressions": [2, { "allowShortCircuit": true, "allowTernary": true }],
+    "no-unused-expressions": [1, { "allowShortCircuit": true, "allowTernary": true }],
     "no-void": 2,
     "no-with": 2,
-    "radix": 2,
+    "radix": 1,
     "vars-on-top": 1,
-    "wrap-iife": [2, "inside"],
-    "yoda": 2,
+    "wrap-iife": [1, "inside"],
+    "yoda": 1,
     "strict": [1, "global"],
     "no-shadow-restricted-names": 2,
     "no-shadow": 2,
@@ -76,62 +72,61 @@
     "no-undef": 2,
     "no-undefined": 2,
     "no-unused-vars": 1,
-    "no-use-before-define": 2,
-    "callback-return": 2,
-    "global-require": 1,
+    "no-use-before-define": 1,
+    "callback-return": 1,
     "handle-callback-err": 1,
-    "no-mixed-requires": 2,
+    "no-mixed-requires": 1,
     "no-new-require": 1,
-    "no-path-concat": 2,
-    "consistent-this": [2, "self"],
-    "eol-last": 2,
-    "indent": 2,
-    "key-spacing": [2, { "align": "colon" }],
+    "no-path-concat": 1,
+    "consistent-this": [1, "self"],
+    "eol-last": 1,
+    "indent": 1,
+    "key-spacing": [1, { "align": "colon" }],
     "linebreak-style": 2,
     "max-len": [1, 120, 4],
-    "new-cap": 2,
-    "new-parens": 2,
-    "no-array-constructor": 2,
-    "no-inline-comments": 2,
-    "no-lonely-if": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-multiple-empty-lines": [2, {"max": 1}],
-    "no-new-object": 2,
-    "no-spaced-func": 2,
+    "new-cap": 1,
+    "new-parens": 1,
+    "no-array-constructor": 1,
+    "no-inline-comments": 1,
+    "no-lonely-if": 1,
+    "no-mixed-spaces-and-tabs": 1,
+    "no-multiple-empty-lines": [1, {"max": 1}],
+    "no-new-object": 1,
+    "no-spaced-func": 1,
     "no-trailing-spaces": 1,
-    "no-unneeded-ternary": 2,
-    "operator-linebreak": [2, "after"],
-    "require-jsdoc": [2, {
+    "no-unneeded-ternary": 1,
+    "operator-linebreak": [1, "after"],
+    "require-jsdoc": [1, {
       "require": {
         "FunctionDeclaration": true,
         "MethodDefinition": false,
         "ClassDeclaration": false
       }
     }],
-    "semi-spacing": 2,
-    "semi": 2,
-    "space-after-keywords": 2,
-    "space-before-blocks": 2,
-    "space-before-function-paren": 2,
-    "space-before-keywords": [2, "always"],
-    "space-in-parens": 2,
-    "jsx-quotes": [2, "prefer-double"],
-    "space-infix-ops": 2,
-    "space-return-throw-case": 2,
-    "spaced-comment": 2,
-    "arrow-spacing": 2,
-    "constructor-super": 2,
+    "semi-spacing": 1,
+    "semi": 1,
+    "space-after-keywords": 1,
+    "space-before-blocks": 1,
+    "space-before-function-paren": 1,
+    "space-before-keywords": [1, "always"],
+    "space-in-parens": 1,
+    "jsx-quotes": [1, "prefer-double"],
+    "space-infix-ops": 1,
+    "space-return-throw-case": 1,
+    "spaced-comment": 1,
+    "arrow-spacing": 1,
+    "constructor-super": 1,
     "no-arrow-condition": 2,
-    "no-class-assign": 2,
-    "no-dupe-class-members": 2,
-    "no-const-assign": 2,
+    "no-class-assign": 1,
+    "no-dupe-class-members": 1,
+    "no-const-assign": 1,
     "no-this-before-super": 2,
-    "no-var": 2,
-    "object-shorthand": 2,
-    "prefer-arrow-callback": 2,
+    "no-var": 1,
+    "object-shorthand": 1,
+    "prefer-arrow-callback": 1,
     "prefer-const": 1,
-    "prefer-spread": 2,
-    "prefer-template": 2
+    "prefer-spread": 1,
+    "prefer-template": 1
   },
   "ecmaFeatures": {
     "arrowFunctions": true,
