--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "material-design-lite": "~1.0.4",
     "vue": "~1.0.3",
-    "requirejs": "~2.1.20",
-    "axios": "~0.7.0"
+    "axios": "~0.7.0",
+    "enquire": "~2.1.2"
   }
 }
