--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,9 @@
     "no-unexpected-multiline": 1,
     "no-unreachable": 1,
     "use-isnan": 2,
-    "valid-jsdoc": 1,
+    "valid-jsdoc": [1, {
+        "requireReturn": false
+    }],
     "valid-typeof": 2,
     "accessor-pairs": 2,
     "block-scoped-var": 2,
