--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Gabriel Juchault <gabriel.juchault@gmail.com>"
   ],
-  "description": "Buckutt Client Application",
+  "description": "Buckless Client Application",
   "license": "MIT",
   "dependencies": {
     "material-design-lite": "~1.0.4",
