--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "authors": [
     "Gabriel Juchault <gabriel.juchault@gmail.com>"
   ],
-  "description": "Buckutt Client Application",
+  "description": "Buckless Client Application",
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --watch --port 8081",
