--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "buckless-client",
   "version": "1.0.0",
-  "authors": [
-    "Gabriel Juchault <gabriel.juchault@gmail.com>"
-  ],
   "description": "Buckless Client Application",
+  "authors": [
+    "Gabriel Juchault <gabriel.juchault@gmail.com>",
+    "Axel Mousset <axel@mousset.me>",
+    "Lucas Soulier <lucas.soulier.utt@gmail.com>"
+  ],
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --watch --port 8081",
-    "build": "webpack"
+    "dev": "webpack-dev-server --port 8081",
+    "build": "NODE_ENV=production webpack --progress --hide-modules",
+    "lint": "eslint . --ignore-pattern public"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
     "css-loader": "^0.23.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
+    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
 }
