--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "node-static": "^0.7.7"
+    "node-static": "^0.7.7",
+    "slug": "^0.9.1"
   }
 }
