--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "axios": "^0.9.1",
+    "enquire.js": "^2.1.1",
+    "material-design-lite": "^1.1.3",
     "node-static": "^0.7.7",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "vue": "^1.0.20"
   }
 }
