--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run build && static -p 8081 public",
     "dev": "webpack-dev-server --port 8081",
     "build": "NODE_ENV=production webpack --progress --hide-modules",
-    "lint": "eslint . --ignore-pattern public,src/bower_components"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
@@ -20,6 +20,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
