chore: Config refactoring (#84)
* refactoring: config

* chore: add config profiles

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,9 @@
         "browser": true,
         "es6": true
     },
+    "globals": {
+        "config": false
+    },
     // required to lint *.vue files
     "plugins": [
         "html"
