--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "buckless-client",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Buckless Client",
-  "author": "Gabriel JUCHAULT <gabriel.juchault@gmail.com>",
+  "author": "Buckless <contact@buckless.com> https://buckless.com",
+  "contributors": [
+    "Gabriel Juchault <gabriel.juchault@gmail.com>",
+    "Axel Mousset <axel@mousset.me>",
+    "Lucas Soulier <lucas.soulier.utt@gmail.com>"
+  ],
+  "repository": "https://github.com/buckless/client.git",
+  "homepage": "https://buckless.com",
   "main": "src/browser.js",
-  "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
