--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   ],
   "repository": "https://github.com/buckless/client.git",
   "homepage": "https://buckless.com",
+  "license": "MIT",
   "main": "src/browser.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "serve": "static dist/ -a 0.0.0.0 -p 8081"
+    "serve": "static dist/ -a 0.0.0.0 -p 8081",
+    "release": "build",
+    "package": "build"
   },
   "dependencies": {
     "axios": "^0.15.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "electron": "^1.4.6",
+    "electron-updater": "^1.4.2",
     "lodash.countby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
-    "node-sass": "^3.11.1",
     "node-static": "^0.7.9",
     "normalize.css": "^5.0.0",
     "sass-loader": "^4.0.2",
@@ -37,6 +38,7 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
@@ -44,6 +46,8 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "electron": "^1.4.6",
+    "electron-builder": "^12.3.1",
     "eslint": "^3.7.1",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-friendly-formatter": "^2.0.5",
@@ -59,6 +63,7 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.11.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "semver": "^5.3.0",
@@ -74,5 +79,37 @@
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
+  },
+  "build": {
+    "appId": "com.buckless.client",
+    "copyright": "Copyright © 2017 Buckless",
+    "productName": "buckless-client",
+    "publish": [
+        { "provider": "github" }
+    ],
+    "directories": {
+      "output": "out"
+    },
+    "dmg": {
+      "icon": "icon.icns",
+      "title": "Buckless Client"
+    },
+    "linux": {
+      "category": "Office",
+      "target": "AppImage",
+      "icon": "../icon.png"
+    },
+    "mac": {
+      "category": "public.app-category.business",
+      "icon": "icon.icns"
+    },
+    "nsis": {
+      "installerIcon": "icon.ico",
+      "installerHeaderIcon": "icon.ico"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    }
   }
 }
