feat(electron): nfc (#82)
* feat(nfc): read mifare classic & start desfire

* fix(nfc): fix errors in desfire reading

* chore: move config.js to an example file

* fix: remove electron-rebuild command

* fix: encapsulation and nfc electron build

* feat(electron): nfc integration

* chore(travis): decent gcc compiler

* chore(travis): use prod build

* fix(dockerfile): fix build in dockerfile

* fix: show correct user credit (#78)

* feat: category priorities (#80)

* fix: filter items by buyer's groups (#81)

* chore: production is docker only

--- a/.eslintrc
+++ b/.eslintrc
@@ -79,6 +79,9 @@
         // Allow dynamic require
         "import/no-dynamic-require": 0,
 
+        // Allow config.js
+        "import/no-unresolved": 0,
+
         // Allow export without default
         "import/prefer-default-export": 0,
 
