--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "build:dev": "cross-env ELECTRON=1 webpack --config build/webpack.dev.conf.js",
+    "build:electron": "cross-env ELECTRON=1 npm run build",
     "lint": "eslint --ext .js,.vue src",
     "serve": "static dist/ -a 0.0.0.0 -p 8081",
     "release": "build",
     "package": "build"
   },
   "dependencies": {
+    "@pokusew/pcsclite": "^0.4.14",
+    "async": "^2.1.2",
     "axios": "^0.15.2",
+    "bluebird": "^3.4.6",
     "electron-updater": "^1.4.2",
     "lodash.countby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
-    "node-static": "^0.7.9",
+    "nfc-pcsc": "^0.3.1",
+    "node-sass": "^3.11.1",
     "normalize.css": "^5.0.0",
     "sass-loader": "^4.0.2",
     "slugify": "^1.0.2",
@@ -45,6 +51,7 @@
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "electron": "^1.4.6",
     "electron-builder": "^12.3.1",
@@ -64,6 +71,7 @@
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
     "node-sass": "^3.11.1",
+    "node-static": "^0.7.9",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "semver": "^5.3.0",
