--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "linux": {
       "category": "Office",
       "target": [ "AppImage" ],
-      "depends": [ "gconf2", "gconf-service", "libnotify4", "libappindicator1", "libxtst6", "libnss3", "libpcsclite1", "libpcsclite-dev", "pcscd" ],
+      "depends": [ "gconf2", "gconf-service", "libnotify4", "libappindicator1", "libxtst6", "libnss3", "pcscd" ],
       "icon": "../"
     },
     "mac": {
