--- a/package.json
+++ b/package.json
@@ -17,17 +17,13 @@
     "build": "node build/build.js",
     "build:dev": "cross-env ELECTRON=1 webpack --config build/webpack.dev.conf.js",
     "build:electron": "cross-env ELECTRON=1 npm run build",
-    "build:serverPackage": "cross-env ELECTRON=1 npm run build:electron && build --linux",
-    "lint": "eslint --ext .js,.vue src",
-    "release": "build",
-    "package": "build"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "@pokusew/pcsclite": "^0.4.14",
     "async": "^2.1.2",
     "axios": "^0.15.2",
     "bluebird": "^3.4.6",
-    "electron-updater": "^1.4.2",
     "lodash.countby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
@@ -55,7 +51,6 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "electron": "^1.4.6",
-    "electron-builder": "^12.3.1",
     "eslint": "^3.7.1",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-friendly-formatter": "^2.0.5",
@@ -84,44 +79,5 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.15.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "build": {
-    "appId": "com.buckless.client",
-    "copyright": "Copyright © 2017 Buckless",
-    "productName": "buckless-client",
-    "publish": [
-      {
-        "provider": "github"
-      }
-    ],
-    "directories": {
-      "output": "out"
-    },
-    "dmg": {
-      "icon": "icon.icns",
-      "title": "Buckless Client"
-    },
-    "linux": {
-      "category": "Office",
-      "target": [ "AppImage" ],
-      "depends": [ "gconf2", "gconf-service", "libnotify4", "libappindicator1", "libxtst6", "libnss3", "pcscd" ],
-      "icon": "../"
-    },
-    "mac": {
-      "category": "public.app-category.business",
-      "icon": "icon.icns"
-    },
-    "nsis": {
-      "installerIcon": "icon.ico",
-      "installerHeaderIcon": "icon.ico"
-    },
-    "win": {
-      "target": [ "nsis" ],
-      "icon": "icon.ico"
-    }
   }
 }
