chore: new build system (#91)
* chore: new build system
* chore(travis): use docker container
* fix(travis): correct build command
* fix(package): lint command
* fix(package): add babel-eslint

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "plugins": ["add-module-exports", "transform-runtime"],
-  "comments": false
+  "presets": [
+    ["latest", { "modules": false }]
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
