--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+sudo: false
 
 services:
   - docker
@@ -15,17 +16,15 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libpcsclite1 libpcsclite-dev
-  - sudo apt-get install -qq pcscd
+      - libpcsclite1
+      - libpcsclite-dev
+      - pcscd
 
 install:
   - yarn install
 
 script:
-  - yarn run build:electron
+  - yarn run build
   - yarn run lint
 
 after_success:
