--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
   "license": "MIT",
   "main": "src/browser.js",
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "build:dev": "cross-env ELECTRON=1 webpack --config build/webpack.dev.conf.js",
-    "build:electron": "cross-env ELECTRON=1 npm run build",
+    "dev": "cross-env NODE_ENV=development webpack --config build/ --progress --hide-modules --watch",
+    "build": "cross-env NODE_ENV=production ELECTRON=1 webpack --config build/ --progress --hide-modules && build",
     "lint": "eslint --ext .js,.vue src",
-    "serve": "static dist/ -a 0.0.0.0 -p 8081",
-    "release": "build",
-    "package": "build"
+    "release": "build"
   },
   "dependencies": {
     "@pokusew/pcsclite": "^0.4.14",
@@ -31,58 +27,51 @@
     "lodash.countby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
-    "nfc-pcsc": "^0.3.1",
-    "node-sass": "^3.11.1",
+    "nfc-pcsc": "^0.4.0",
+    "node-sass": "^4.5.0",
     "normalize.css": "^5.0.0",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^6.0.2",
     "slugify": "^1.0.2",
     "vue": "^2.0.1",
     "vuex": "^2.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.0.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
-    "chalk": "^1.1.3",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-latest": "^6.22.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^3.1.3",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.2",
     "electron": "^1.4.6",
-    "electron-builder": "^12.3.1",
+    "electron-builder": "^14.5.3",
     "eslint": "^3.7.1",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^2.0.5",
-    "eslint-import-resolver-webpack": "^0.7.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.3.0",
+    "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
     "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
+    "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.11.1",
-    "node-static": "^0.7.9",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.15.0"
+    "node-sass": "^4.5.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "sass-loader": "^5.0.1",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^11.1.3",
+    "vue-style-loader": "^2.0.3",
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-closure-compiler": "^2.1.4",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-merge": "^3.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -93,7 +82,9 @@
     "copyright": "Copyright © 2017 Buckless",
     "productName": "buckless-client",
     "publish": [
-        { "provider": "github" }
+      {
+        "provider": "github"
+      }
     ],
     "directories": {
       "output": "out"
@@ -104,7 +95,9 @@
     },
     "linux": {
       "category": "Office",
-      "target": "AppImage",
+      "target": [
+        "AppImage"
+      ],
       "icon": "../"
     },
     "mac": {
@@ -116,7 +109,9 @@
       "installerHeaderIcon": "icon.ico"
     },
     "win": {
-      "target": "nsis",
+      "target": [
+        "nsis"
+      ],
       "icon": "icon.ico"
     }
   }
