--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize.css": "^5.0.0",
     "sass-loader": "^6.0.2",
     "slugify": "^1.0.2",
+    "socket.io-client": "^1.7.3",
     "unzip": "^0.1.11",
     "vue": "^2.0.1",
     "vuex": "^2.0.0"
