--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,9 @@ addons:
       - libpcsclite-dev
       - pcscd
 
-install:
-  - yarn install
-
 script:
-  - yarn run build
-  - yarn run lint
+  - yarn build
+  - yarn lint
 
 env:
   global:
