--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "main": "src/browser.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --config build/ --progress --hide-modules --watch",
+    "dev:electron": "cross-env NODE_ENV=development ELECTRON=1 webpack --config build/ --progress --hide-modules --watch",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/ --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production ELECTRON=1 webpack --config build/ --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src",
     "release": "build"
@@ -57,6 +58,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "macro-loader": "^1.0.0",
     "node-sass": "^4.5.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "sass-loader": "^6.0.3",
