--- a/package.json
+++ b/package.json
@@ -59,15 +59,21 @@
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
     "macro-loader": "^1.0.0",
-    "node-sass": "^4.5.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "sass-loader": "^6.0.3",
+    "postcss-calc": "^6.0.0",
+    "postcss-color-function": "^4.0.0",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-properties": "^6.0.1",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.5",
+    "postcss-mixins": "^6.0.0",
+    "postcss-nested": "^2.0.2",
+    "postcss-simple-vars": "^4.0.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.3.3",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.3.2",
-    "webpack-closure-compiler": "^2.1.4",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
   }
