--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "dev:electron": "cross-env NODE_ENV=development ELECTRON=1 webpack --config build/ --progress --hide-modules --watch",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/ --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production ELECTRON=1 webpack --config build/ --progress --hide-modules",
+    "lint": "eslint --ext .js,.vue src",
     "release": "build"
   },
   "dependencies": {
     "@pokusew/pcsclite": "^0.4.14",
-    "async": "^2.4.1",
+    "async": "^2.2.0",
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
-    "eslint-plugin-vue": "3.1.3",
     "lodash.countby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
@@ -31,28 +31,28 @@
     "normalize.css": "^7.0.0",
     "slugify": "^1.0.2",
     "unzip": "^0.1.11",
-    "vue": "^2.3.4",
-    "vuex": "^2.3.1"
+    "vue": "^2.2.1",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-latest": "^6.24.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "electron": "^1.6.11",
-    "eslint": "^4.0.0",
-    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb-base": "^11.1.2",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.8.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.7.0",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.3",
+    "express": "^4.15.2",
     "file-loader": "^0.11.2",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
@@ -65,16 +65,16 @@
     "postcss-custom-media": "^6.0.0",
     "postcss-custom-properties": "^6.0.1",
     "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.5",
     "postcss-mixins": "^6.0.0",
     "postcss-nested": "^2.0.2",
     "postcss-simple-vars": "^4.0.0",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^12.2.1",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.0.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.4",
+    "vue-template-compiler": "^2.2.6",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
+    "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
   }
 }
