--- a/cordova/package.json
+++ b/cordova/package.json
@@ -12,9 +12,9 @@
         }
     },
     "dependencies": {
-        "cordova-android": "~6.1.2",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-mifare-ultralight": "~1.0.0",
-        "cordova-plugin-whitelist": "1"
+        "cordova-plugin-mifare-ultralight": "^1.0.0",
+        "cordova-plugin-whitelist": "^1.3.2"
     }
 }
