--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "src/main.js",
   "scripts": {
-    "postinstall": "cd cordova && mkdir -p www && cordova prepare && cd ..",
+    "postinstall": "cd cordova && mkdir -p www && cordova prepare && cd .. && electron-rebuild",
     "browser": "static dist/browser --port 8081",
     "electron": "electron .",
     "android": "cd cordova && cordova run android --emulator",
@@ -30,6 +30,7 @@
     "nfc-pcsc": "^0.5.0",
     "post-compile-webpack-plugin": "^0.1.1",
     "normalize.css": "^7.0.0",
+    "post-compile-webpack-plugin": "^0.1.1",
     "slugify": "^1.0.2",
     "unzip": "^0.1.11",
     "vue": "^2.3.3",
@@ -53,6 +54,7 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "electron-packager": "^8.7.1",
+    "electron-rebuild": "^1.5.11",
     "eslint": "^4.1.1",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-friendly-formatter": "^3.0.0",
@@ -72,8 +74,8 @@
     "macro-loader": "^1.0.0",
     "node-static": "^0.7.9",
     "opn": "^4.0.2",
-    "ora": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
     "postcss-calc": "^6.0.0",
     "postcss-color-function": "^4.0.0",
     "postcss-custom-media": "^6.0.0",
