--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.5.0",
     "electron": "^1.6.11",
     "lodash.countby": "^4.6.0",
+    "lodash.memoize": "^4.1.2",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^7.0.0",
