--- a/cordova/package.json
+++ b/cordova/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-mifare-ultralight": "^1.0.0",
+        "cordova-plugin-mifare-ultralight": "git+https://github.com/buckless-team/cordova-plugin-mifare-ultralight.git",
         "cordova-plugin-whitelist": "^1.3.2"
     }
 }
