feat: offline mode (#153)

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "electron": "electron .",
     "android": "cd cordova && cordova run android --emulator",
     "android:device": "cp -rf dist cordova/www && cd cordova && cordova run android --device",
-    "dev:android": "cross-env TARGET=cordova PLATFORM=android webpack --config build/webpack.dev.conf.js --progress --hide-modules --watch",
-    "dev:browser": "cross-env TARGET=browser node build/dev-server.js",
+    "dev:android": "cross-env TARGET=cordova NODE_ENV=development PLATFORM=android webpack --config build/webpack.dev.conf.js --progress --hide-modules --watch",
+    "dev:browser": "cross-env TARGET=browser NODE_ENV=development node build/dev-server.js",
     "dev:electron": "cross-env TARGET=electron NODE_ENV=development node build/dev-server.js",
     "build:browser": "cross-env TARGET=browser node build/build.js",
     "build:electron": "cross-env TARGET=electron node build/build.js",
@@ -21,17 +21,22 @@
   },
   "dependencies": {
     "@buckless/signed-number": "^1.1.1",
-    "@pokusew/pcsclite": "^0.4.14",
+    "@pokusew/pcsclite": "^0.4.18",
     "async": "^2.2.0",
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.0",
     "electron": "^1.6.11",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.countby": "^4.6.0",
     "lodash.memoize": "^4.1.2",
+    "lodash.merge": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^7.0.0",
+    "rusha": "^0.8.11",
     "slugify": "^1.0.2",
+    "socket.io-client": "^2.0.3",
     "unzip": "^0.1.11",
     "vue": "^2.3.3",
     "vuex": "^2.0.0"
