--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.0",
+    "dexie": "^2.0.1",
     "electron": "^1.6.11",
     "lodash.clonedeep": "^4.5.0",
     "lodash.countby": "^4.6.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
     "lodash.merge": "^4.6.0",
+    "lodash.padstart": "^4.6.1",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^7.0.0",
