--- a/cordova/package.json
+++ b/cordova/package.json
@@ -9,14 +9,20 @@
     "plugins": {
       "cordova-plugin-mifare-ultralight": {},
       "cordova-plugin-whitelist": {},
-      "cordova-client-cert-authentication": {}
+      "cordova-client-cert-authentication": {},
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-keyboard": {},
+      "cordova-sqlite-storage": {}
     }
   },
   "dependencies": {
     "cordova-android": "^6.2.3",
     "cordova-client-cert-authentication": "^1.0.0",
     "cordova-plugin-compat": "^1.1.0",
+    "cordova-plugin-keyboard": "^1.2.0",
     "cordova-plugin-mifare-ultralight": "git+https://github.com/buckless-team/cordova-plugin-mifare-ultralight.git",
-    "cordova-plugin-whitelist": "^1.3.3"
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.2.0",
+    "phonegap-plugin-barcodescanner": "^7.0.2"
   }
 }
