--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@buckless/signed-number": "^1.1.1",
     "@pokusew/pcsclite": "^0.4.18",
     "async": "^2.2.0",
-    "axios": "^0.17.1",
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.0",
@@ -44,6 +43,7 @@
     "lodash.padstart": "^4.6.1",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
+    "lodash.uniqueid": "^4.0.1",
     "normalize.css": "^7.0.0",
     "rusha": "^0.8.11",
     "slugify": "^1.0.2",
